[package]
version = "0.1.0"
name = "algo_web"
repository = "https://github.com/seed-rs/seed-quickstart"
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
rand = "*"
itertools = "*"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
