[package]
version = "0.1.0"
name = "algo_web"
repository = "https://github.com/seed-rs/seed-quickstart"
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.9"
rand = "0.8"
itertools = "0.10"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

#[patch.crates-io]
#seed = { git = "https://github.com/seed-rs/seed" }